--- a/doubleSelection-ui/src/assets/styles/variables.scss
+++ b/doubleSelection-ui/src/assets/styles/variables.scss
@@ -9,7 +9,7 @@ $yellow:#FEC171;
 $panGreen: #30B08F;
 
 // 默认菜单主题风格
-$base-menu-color:#bfcbd9;
+$base-menu-color:black;
 $base-menu-color-active:#f4f4f5;
 $base-menu-background:#ffffff;
 $base-logo-title-color: #ffffff;
@@ -18,7 +18,7 @@ $base-menu-light-color:rgba(0, 0, 0, 0.7);
 $base-menu-light-background:#ffffff;
 $base-logo-light-title-color: #001529;
 
-$base-sub-menu-background:#1f2d3d;
+$base-sub-menu-background:#ffff;
 $base-sub-menu-hover:#001528;
 
 // 自定义暗色菜单风格
